change to paint-by-click (like in Paint)

--- a/style.css
+++ b/style.css
@@ -81,10 +81,15 @@ main {
 
 .divBlock {
     flex: 1 1 auto;
+    cursor: crosshair;
+    -webkit-user-drag: none;
 }
 
 .divBlockColored {
     background-color: #000000;
+    cursor: crosshair;
+    -webkit-user-drag: none;
+    
 }
 
 footer {
