rework painting function to improve performance and fixed mouseover not wokring in firefox

--- a/style.css
+++ b/style.css
@@ -82,6 +82,8 @@ main {
 .divBlock {
     flex: 1 1 auto;
     cursor: crosshair;
+    user-select: none;
+    -webkit-user-drag: none;
 }
 
 .divBlockColored {
