--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+:root {
+    --canvas-size: 32rem;
+}
+
 body {
     padding: 0;
     margin: 0;
@@ -15,60 +19,80 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    height: 25vh;
+    height: 4rem;
     background-color: #E8E1DB;
-    padding: 1vh 0;
+    padding: 1rem 0;
 }
 
 h1 {
-    font-size: 5vh;
+    font-size: 2rem;
     text-align: center;
-    margin: 0;
-}
-
-.settings {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-    width: 70vh;
-    text-align: center;
-}
-
-.sliderContainer {
-    display: flex;
-    align-items: center;
-    font-size: 2vh;
-
-}
-
-.slider {
-    height: 3vh;
-    margin: 0;
-}
-
-.reset {
-    font-size: 2vh;
-    height: 3vh;
     margin: 0;
 }
 
 main {
     display: flex;
-    height: 75vh;
+    flex-direction: column;
+    height: 90vh;
     justify-content: center;
+    align-items: center;
     background-color: #A9AC5D;
 }
 
+.paintContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.settings-top,
+.settings-bottom {
+    display: flex;
+    width: var(--canvas-size);
+}
+
+.buttonsContainer {
+    display: flex;
+    flex-direction: row;
+}
+
+.settings-top > div {
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.colorContainer,
+.backgroundColorContainer {
+    width: calc(var(--canvas-size) / 3);
+}
+
+.eraserContainer {
+    width: calc(var(--canvas-size) / 3);
+}
+
+.sliderContainer {
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+    width: calc(var(--canvas-size) / 3 * 2);
+}
+
+.reset {
+    font-size: 1rem;
+    margin: 0;
+    width: calc(var(--canvas-size) / 3);
+}
 
 .largeContainer {
-    margin-top: 2.5vh;
-    margin-bottom: 2.5vh;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
-    height: 70vh;
-    width: 70vh;
+    height: var(--canvas-size);
+    width: var(--canvas-size);
     background-color: white;
 }
 
@@ -76,7 +100,7 @@ main {
     flex: 1 1 auto;
     display: flex;
     justify-content: space-around;
-    width: 70vh;
+    width: var(--canvas-size);
 }
 
 .divBlock {
@@ -86,46 +110,13 @@ main {
     -webkit-user-drag: none;
 }
 
-.divBlockColored {
-
-}
-
 footer {
-    height: 10vh;
-    background-color: #6D6C3C;
-    text-align: center;
-}
-
-/* 
-
-
-html
-body {
-    padding: 0;
-    border: 0;
-    margin: 0;
-}
-
-.entourage {
-    background-color: bisque;
-    padding: 0 10vw 10vh 10vw;
-}
-
-header {
-    height: 10vh;
-}
-
-
-h1 {
-    text-align: center;
-    margin: 1vh 0 0 0;
-    padding: 0;
-    border: 0;
-}
-
-.panel {
-    margin-top: 1vh;
+    position: fixed;
     display: flex;
-    justify-content: space-around;
+    align-items: center;
+    justify-content: center;
+    bottom: 0;
+    height: 4rem;
+    width: 100vw;
+    background-color: #6D6C3C;
 }
-*/ 
